--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
     "antd": "^3.11.6",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -47,6 +48,9 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -116,12 +120,18 @@
     "presets": [
       "react-app"
     ],
-     "plugins": [
-      ["import", {
-        "libraryName": "antd",
-        "libraryDirectory": "es",
-        "style": true
-      }]
+    "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "libraryDirectory": "es",
+          "style": true
+        }
+      ]
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.7"
   }
 }
